--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
     <!-- Sponsors section -->
     <section id="sponsors">
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -197,14 +198,12 @@
                 </div>
             </div>
 
-            <div class="row sponsors">
-              <!-- <div class="col-md-6">
-                <a target="_blank" href="https://www.cmns.umd.edu/"><img src="img/sponsors/cmns-min.png" name="College of Mathematical and Natural Sceinces"></a>
-              </div> -->
-              <div class="col-md-4 col-md-offset-4">
-                <a target="_blank" href="http://www.rockwellcollins.com/"><img src="img/sponsors/rockwell-min.png" name="Rockwell Collins"></a>
+            <div class="row">
+              <div class="col-md-offset-4 col-md-4">
+                  <a target="_blank" href="https://www.rockwellcollins.com/"><img class="rounded float-left" src="img/sponsors/rockwell-min.png" name="Rockwell Collins"></a>
               </div>
             </div>
+        </div>
 
             <!-- <div class="row-custom sponsors centered">
                 <div class="half">
